--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": "true",
   "dependencies": {
-    "foundation": "zurb/bower-foundation"
+    "foundation": "zurb/bower-foundation",
+    "superslides": "~0.6.2",
+    "benbarnett/jQuery-Animate-Enhanced": "~1.1.0"
   }
 }
