--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,12 @@
 {
-  "name": "foundation-compass-app",
+  "name": "fuckupnight-template",
   "version": "0.0.1",
   "private": "true",
   "dependencies": {
     "foundation": "zurb/bower-foundation",
     "superslides": "~0.6.2",
+    "font-awesome": "~4.2.0",
+    "screenfull": "~2.0.0",
     "benbarnett/jQuery-Animate-Enhanced": "~1.1.0"
   }
 }
